--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DB_HOST=mongodb+srv://<DB_USER>:<DB_USER_PASS>@cluster0.vwz9q.mongodb.net/<DB_NA
 DB_USER=
 DB_USER_PASS=
 DB_NAME=
+SECRET_KEY=
+SENDGRID_KEY=
